--- a/index.html
+++ b/index.html
@@ -78,10 +78,27 @@
         </div>
       </div>
       <div class="showup__content">
-        <div class="showup__content-title">Explore Educational<br>
-          Modules To Evolve <br>
-          Your Career</div>
+        <div class="showup__content-title">Explore Educational<br>Modules To Evolve <br>Your Career
+        <div class="modules__info-btns showup__info-btns">
+              <button type="button" class="slick-prev showup__btn">
+                <div class="play__content">
+                  <svg width="9" height="11" viewBox="0 0 9 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path opacity="1" d="M0 5.5L9 11V0L0 5.5Z" fill="#EAEAEA" />
+                  </svg>
+                </div>
+              </button>
+              <button type="button" class="slick-next showup__btn">
+                <div class="play__content">
+                  <svg width="9" height="11" viewBox="0 0 9 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path opacity="1" d="M9 5.5L0 11V0L9 5.5Z" fill="#EAEAEA" />
+                  </svg>
+                </div>
+              </button>
+            </div>
+        </div>
+          
         <div class="showup__content-slider">
+          <div class="showup__content-card">
           <a href="#" class="card card__1 card-active">
             <div class="card__controls">
               <div class="card__controls-count">01</div>
@@ -186,6 +203,7 @@
             </div>
             <div class="card__title">Customer<br> For Life</div>
           </a>
+        </div>
         </div>
         <div class="showup__content-side">
           <div class="showup__content-explore">
