--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
             <div class="form__block">
               <div>
                 <label for="name">My name is</label>
-                <input type="text" placeholder="Your name">
+                <input name="name" type="text" placeholder="Your name">
                 <svg class="icon" width="18" height="20" viewBox="0 0 18 20" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <g opacity="0.2">
@@ -710,8 +710,8 @@
             </div>
             <div class="form__block">
               <div>
-                <label for="name">And i am</label>
-                <input type="text" placeholder="ex. Retail loan officer">
+                <label for="name">And I am</label>
+                <input name="I_am" type="text" placeholder="ex. Retail loan officer">
                 <svg class="icon" width="22" height="20" viewBox="0 0 22 20" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <rect opacity="0.2" x="1" y="5" width="20" height="14" rx="2" stroke="#fff" stroke-width="2"
@@ -752,7 +752,7 @@
             <div class="form__block">
               <div>
                 <label for="name">Hit me up here</label>
-                <input type="email" placeholder="Email">
+                <input class="email" name="email" type="email" placeholder="Email">
                 <svg class="icon" width="22" height="18" viewBox="0 0 22 18" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <g opacity="0.2">
@@ -767,7 +767,7 @@
 
               <div>
                 <label for="name">And here</label>
-                <input type="text" id="phone" placeholder="+1 (___) ___-____">
+                <input name="phone" type="text" id="phone" placeholder="+1 (___) ___-____">
                 <svg class="icon" width="23" height="22" viewBox="0 0 23 22" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <g opacity="0.2">
@@ -780,7 +780,7 @@
             </div>
             <div class="form__block">
               <button class="btn">Send</button>
-              <div class="policy">By clicking «Send» I am agreed<br>
+              <div class="policy block_message">By clicking «Send» I am agreed<br>
                 with Privacy Policy.</div>
             </div>
           </form>
@@ -1147,7 +1147,7 @@
           <form class="form">
             <div class="form__item">
               <label for="name">My name is</label>
-              <input type="text" placeholder="Your name">
+              <input name="name" type="text" placeholder="Your name">
               <svg class="icon" width="18" height="20" viewBox="0 0 18 20" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g opacity="0.2">
@@ -1162,7 +1162,7 @@
 
             <div class="form__item">
               <label for="name">You can contact me here</label>
-              <input type="email" placeholder="Your email">
+              <input class="email" name="email" type="email" placeholder="Your email">
               <svg class="icon" width="22" height="18" viewBox="0 0 22 18" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g opacity="0.2">
@@ -1177,7 +1177,7 @@
 
             <div class="form__item">
               <label for="name">I want to meet you on</label>
-              <input type="datetime" placeholder="When?">
+              <input id="when" name="date" type="datetime" placeholder="When?">
               <svg class="icon" width="20" height="22" viewBox="0 0 20 22" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g opacity="0.2">
@@ -1189,7 +1189,11 @@
                 </g>
               </svg>
             </div>
-            <button class="btn">Schedule</button>
+            <div class="form__item form__btn">
+              <button class="btn">Schedule</button>
+              <div class="policy block_message">asdnaksdlma asdl/<br>askd/ mkla/msd</div>
+            </div>
+            
           </form>
         </div>
       </div>
