--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,7 @@
             </div>
             <div class="form__item form__btn">
               <button class="btn">Schedule</button>
-              <div class="policy block_message">asdnaksdlma asdl/<br>askd/ mkla/msd</div>
+              <div class="policy block_message"></div>
             </div>
             
           </form>
@@ -1206,7 +1206,10 @@
       <div class="close">&times;</div>
     </div>
   </div>
-  <script src="dist/js/bundle.js"></script>
+
+  
+  <script src="/dist/js/bundle.js"></script>
+  
 </body>
 
 </html>
