--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,7 @@
               </div>
             </div>
             <div class="video">
-              <div class="play">
+              <div data-url="https://www.youtube.com/embed/4o4pyl7gWg4" class="play">
                 <div class="play__circle">
                   <svg viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M14 8L0 16V0L14 8Z" fill="#6D53AF" />
